[package]
name = "blob-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
dotenv = "0.15.0"
envy = "0.4.2"
ethers = "1.0.2"
futures = "0.3.25"
hex = "0.4.3"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["gzip"] }
mongodb = "2.3.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.150"
tokio = { version = "1.23.0", features = ["full"] }




