[package]
name = "blob-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
dotenv = "0.15.0"
envy = "0.4.2"
ethers = "1.0.2"
futures = "0.3.25"
hex = "0.4.3"
reqwest = { version = "0.11.13", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
jsonwebtoken = "8.3.0"


# logging
log = "0.4.17"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"

# error handling
anyhow = { version = "1.0.70", features = ["backtrace"] }
thiserror = "1.0.40"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.24"
serde_json = "1.0.96"
