[package]
name = "blob-indexer"
description = "Blob indexer for the Blobscan explorer"
version = "0.4.3"
license = "MIT"
repository = "https://github.com/Blobscan/blobscan-indexer.rs"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
dyn-clone = "1.0.17"
dotenv = "0.15.0"
envy = "0.4.2"
alloy = { version = "1.0.9", features = ["provider-http", "rpc-types"] }
sha2 = "0.10.8"
futures = "0.3.25"
hex = "0.4.3"
reqwest = { version = "0.11.13", features = ["json"] }
reqwest-eventsource = "0.5.0"
url = { version = "2.3.1", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
jsonwebtoken = "8.3.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.24"
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive"] }


# logging
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter" ] }
tracing-log = "0.1.1"

# error handling
anyhow = { version = "1.0.70", features = ["backtrace"] }
thiserror = "1.0.40"
sentry = { version = "0.31.2", features = ["debug-images"] }
sentry-tracing = "0.31.2"


[dev-dependencies]
mockall = "0.12.1"
